--- a/great-idea/index.html
+++ b/great-idea/index.html
@@ -19,7 +19,7 @@
     <!-- Copy and paste your HTML from the first UI project here -->
     <div class="container-nav">
       <nav>
-        <a href="#">Services</a>
+        <a href="services.html">Services</a>
         <a href="#">Product</a>
         <a href="#">Vision</a>
         <a href="#">Features</a>
@@ -33,7 +33,7 @@
     <div class="container-header">
       <div class="container-header-left"> 
         <h1>
-          Innovation
+          Innovation 
           On
           Demand
         </h1>
